data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1582.wast
;; 3. **Test Description**:     - Deploy a loop where `br_if` targets a block outside and the condition is always true. The loop should exit correctly.    - **Constraint Checking**: Ensures exit criteria are correctly handled by identifying the block results for non-loop targets.    - **Infinite Loop Relation**: To verify the exit does not trap the program in an infinite loop, demonstrating accurate differentiation for non-loops in `wizard_engine`.

(assert_invalid
  (module
    (func $loop-branch (result i32)
      (block $outer (result i32)
        (loop $inner
          (br_if $outer (i32.const 1))
          (br $inner)
        )
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)